# llama-kotlin

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/zhangke/llama/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/zhangke/llama/: Llama.kt
app/src/main/java/com/zhangke/llama/app/: MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/zhangke/llama/app/: ExampleUnitTest.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/com/zhangke/llama/kotlin/: MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/com/zhangke/llama/kotlin/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonTest/kotlin/com/zhangke/llama/kotlin/: ComposeAppCommonTest.kt
composeApp/src/iosMain/kotlin/com/zhangke/llama/kotlin/: MainViewController.kt  Platform.ios.kt
composeApp/src/jvmMain/kotlin/com/zhangke/llama/kotlin/: Platform.jvm.kt  main.kt
core/: build.gradle.kts
core/src/androidDeviceTest/kotlin/com/zhangke/llama/kotlin/core/: ExampleInstrumentedTest.kt
core/src/androidHostTest/kotlin/com/zhangke/llama/kotlin/core/: ExampleUnitTest.kt
core/src/androidMain/kotlin/com/zhangke/llama/kotlin/core/: Platform.android.kt
core/src/commonMain/kotlin/com/zhangke/llama/kotlin/core/: Platform.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+4 files in other folders)
